--- a/service/game2048/templates/deployment.yaml
+++ b/service/game2048/templates/deployment.yaml
@@ -52,6 +52,13 @@ spec:
             timeoutSeconds: 5
             periodSeconds: 10
             initialDelaySeconds: 20
+          lifecycle:
+             preStop:
+               exec:
+                 command:
+                - /bin/bash
+                - -c
+                - sleep 30
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
       {{- with .Values.nodeSelector }}
